Preload resources (#70)
* added asset loading